ФЗ 5 - Исправил замечания ревьюера. (LinkedList)